src/test/ui/hrtb/issue-62203-hrtb-ice.stderr
error[E0271]: type mismatch resolving `<[closure@$DIR/issue-62203-hrtb-ice.rs:41:16: 44:14] as std::ops::FnOnce<((<Unit2 as Ty<'r>>::V,),)>>::Output == Unit3`
  --> $DIR/issue-62203-hrtb-ice.rs:38:19
   |
LL |     let v = Unit2.m(
   |                   ^ expected struct `Unit4`, found struct `Unit3`
   |
   = note: required because of the requirements on the impl of `for<'r> T0<'r, (<Unit2 as Ty<'r>>::V,)>` for `L<[closure@$DIR/issue-62203-hrtb-ice.rs:41:16: 44:14]>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0271`.
